---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-02-
  Content:
    - Added AI trainer, model training mechanic (gambling to improve the model until it reaches tier 10, slot it into the supercomputer)
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-02-19
  Bugfixes:
    - Fixed removal of placed optical fibers
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-02-19
  Changes:
    - (in Moshine-assets) Modified mixed-ores ratios (Neodymium*5, sand-, sulfur-, coal+, copper+)
    - (in Moshine-assets) Petroleum custom recipe changed (coal required instead of carbon, and outputs carbon instad of coal)
    - (in Moshine-assets) Prevented nuclear/fusion reactors from being built on the planet
    - Made optical fiber length (almost) infinite
    - Disallow productivity modules in supercomputers
  Compatibility:
    - Added compatibility with Silica & Silicon (thanks to Dh4mpyr)
  Locale:
    - Chinese translation by rlcyyg1108
    - Russian translation by GafarovMaxim
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-02-11
  Compatibility:
    - Added compatibility with mods that add ingredients to ALL techs
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-02-11
  Changes:
    - Added Quantum-processor productivity infinite research (gives a reward at the end of the planet, makes the experience complete until more content is made in the future)
    - Made supercomputer display after biolab in reseach
    - Forced update of Moshine-assets (fixed recycling coal would give sand/sulfur/carbon, Molten-iron lava more blue, mixed ore non-infinite)