@@ -12,7 +12,7 @@ moshine-tech-magnet=Magnetism
 moshine-tech-hard-drive=Data storage
 moshine-tech-supercomputer=Super computer science
 moshine-tech-data-extractor=Fulgoran data discovery
-moshine-tech-3d-data-storage=3D data storage
+moshine-tech-3d-data-storage=Holographic core
 moshine-tech-data-processor=Machine learning
 moshine-tech-quantum-processor-productivity=Quantum processor productivity
 moshine-tech-ai-trainer=Neural networks
@@ -25,7 +25,7 @@ moshine-tech-magnet=Process neodymium and iron into powerful magnets.
 moshine-tech-hard-drive=The hard drive is a very basic form of data storage.
 moshine-tech-supercomputer=The supercomputer finds new knowledge by processing huge quantities of information.
 moshine-tech-data-extractor=Allows you to extract data from crashed Fulgoran labs.
-moshine-tech-3d-data-storage=Data can be optimized by using a matrix instead of a surface. It could lead to a next level of artificial intelligence.
+moshine-tech-3d-data-storage=Holographic cores are the optimal way to host a complex AI model, and later train it.
 moshine-tech-data-processor=Where data training happens to lead to superior forms of intelligence.
 moshine-tech-ai-trainer=AI models can be optimized by learning from themselves, to then reach unseen levels of research.
 
@@ -54,7 +54,7 @@ silicon=Silicon
 silicon-cell=Silicon cell
 silicon-carbide=Silicon carbide
 hard-drive=Hard-drive
-3d-data-storage=3D model storage
+3d-data-storage=Holographic core
 model-unstable=Trained model (unstable)
 model-stable=Trained model (stable)
 ai-tier-1=AI (tier 1)
@@ -70,10 +70,10 @@ ai-tier-10=AI (tier 10)
 
 ai-trainer=AI trainer
 
-datacell-empty=Datacell [empty]
-datacell-raw-data=Datacell [raw data]
-datacell-equation=Datacell [equation]
-datacell-solved-equation=Datacell [solved equation]
+datacell-empty=Datacell []
+datacell-raw-data=Datacell [Raw data]
+datacell-equation=Datacell [Equation]
+datacell-solved-equation=Datacell [Solved equation]
 
 [item-description]
 supercomputer=Unlocks technologies by advancing the machines intelligence.
@@ -81,7 +81,7 @@ data-processor=Processes data into computing parts.
 data-extractor=Observes and extracts information from Moshine's destroyed ships.
 silicon-carbide=Resistant to sun radiations and heat.
 model-unstable=Explodes in 30s if not immediately transformed or destroyed.
-3d-data-storage=Complex training model matrix storage.
+3d-data-storage=Can store an AI model.
 ai-trainer=Input some AI models to improve them. This process can be unstable.
 
 [fluid-name]
@@ -98,20 +98,20 @@ silicon=Silicon
 silicon-cell=Silicon cell
 silicon-carbide=Silicon carbide
 hard-drive=Hard-drive
-3d-data-storage=3D model storage
+3d-data-storage=Holographic storage
 model-unstable=Trained model (unstable)
 model-stable=Trained model (stable)
 advanced-silicon=Silicon
-ai-tier-0=AI training: model
-ai-tier-1=AI training: tier 1
-ai-tier-2=AI training: tier 2
-ai-tier-3=AI training: tier 3
-ai-tier-4=AI training: tier 4
-ai-tier-5=AI training: tier 5
-ai-tier-6=AI training: tier 6
-ai-tier-7=AI training: tier 7
-ai-tier-8=AI training: tier 8
-ai-tier-9=AI training: tier 9
+ai-tier-0=Neural training: tier 1
+ai-tier-1=Neural training: tier 2
+ai-tier-2=Neural training: tier 3
+ai-tier-3=Neural training: tier 4
+ai-tier-4=Neural training: tier 5
+ai-tier-5=Neural training: tier 6
+ai-tier-6=Neural training: tier 7
+ai-tier-7=Neural training: tier 8
+ai-tier-8=Neural training: tier 9
+ai-tier-9=Neural training: tier 10
 
 datacell-empty=Datacell
 datacell-raw-data-loading=Datacell: raw data loading
