@@ -197,8 +197,8 @@ data:extend({
     category = "electromagnetics", -- only electromagnetic plant
     energy_required = 5,
     ingredients = {
-      {type = "item", name = "neodymium", amount = 5},
-      {type = "fluid", name = "molten-iron", amount = 2},
+      {type = "item", name = "neodymium", amount = 1},
+      {type = "fluid", name = "molten-iron", amount = 10},
     },
     results = {{type = "item", name = "magnet", amount = 1}},
     allow_productivity = true,
